# github-crawler

./: Cargo.toml  README.md
.github/workflows/: crawl.yml
migration/: migration.sql
src/: lib.rs  main.rs
src/infrastructure/: crawler_parallel.rs  crawler_sequential.rs  crawler_worker.rs  fetcher_graphql.rs  fetcher_rate_limiter.rs  fetcher_retrier.rs  mod.rs  persister_postgresql.rs  persister_retrier.rs
src/interface/: crawler.rs  fetcher.rs  mod.rs  persister.rs
src/model/: entities.rs  error.rs  mod.rs  request.rs  response.rs
