[package]
name = "github-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.37", features = ["derive", "env"] }
env_logger = "0.11.8"
gql_client = "1.0.7"
log = "0.4.27"
mockall = "0.13.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1.44.1", features = ["full"] }
